target/classes/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: satellite.cdwjrekl5mzj.us-east-1.rds.amazonaws.com
